<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactViewModel"
            type="com.rakibofc.easycontact.viewmodel.AddContactViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/fab_to_contact_trans"
        tools:context=".view.AddContactActivity"
        tools:ignore="UnusedAttribute">

        <ImageButton
            android:id="@+id/iv_add_photo"
            android:layout_width="@dimen/add_image_size"
            android:layout_height="@dimen/add_image_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/def_margin"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/add_photo"
            android:scaleType="fitCenter"
            android:src="@drawable/add_photo" />

        <EditText
            android:id="@+id/et_add_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_add_photo"
            android:layout_centerHorizontal="true"
            android:autofillHints="name"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_add_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_add_name"
            android:layout_centerHorizontal="true"
            android:autofillHints="phone"
            android:drawableStart="@drawable/baseline_phone_24"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:layout_weight="1"
                android:padding="@dimen/btn_padding"
                android:text="@string/save"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</layout>
