<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/contact_margin"
    android:background="@drawable/item_contact_bg"
    android:orientation="horizontal"
    android:padding="@dimen/item_contact_padding">

    <ImageView
        android:id="@+id/iv_user_logo"
        android:layout_width="@dimen/contact_logo_size"
        android:layout_height="@dimen/contact_logo_size"
        android:layout_gravity="center"
        android:background="@drawable/contact_logo_bg"
        android:contentDescription="@string/user_logo"
        android:src="@drawable/user_64dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/def_padding"
        android:paddingEnd="@dimen/def_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/demo_name"
            android:textSize="@dimen/contact_name_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/demo_no"
            android:textSize="@dimen/contact_no_text_size" />

    </LinearLayout>

</LinearLayout>